# Radiata

./: README.md
src/backend/: pyproject.toml
src/backend/backend/: __main__.py  base.py  main.py
src/backend/backend/routers/: auth.py  heartbeat.py  judge.py  problem.py  sandbox.py  upload.py
src/backend/backend/utils/: language_config.py  sandbox_pool.py
src/backend/sandbox/: Dockerfile  sources.list
src/frontend/: environment.d.ts  package.json
src/frontend/src/: index.tsx
src/frontend/src/api/: auth.ts  judge.ts  problem.ts
src/frontend/src/components/: needAuth.ts
src/frontend/src/pages/: createProblem.tsx  error-page.tsx  login.tsx  problem.tsx  problemList.tsx  root.tsx  sandbox.tsx  upload.tsx
src/judger/: docker-compose.yml
src/judger/data/backend/test_case/1001/: info
src/script/: install_env.sh
