[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["XDeviation <191602098@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.93.0"
uvicorn = "^0.20.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
